welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:9: error: type mismatch;
 found   : Int
 required: Nothing
      T(n)=k
           ^golomb:11: error: type mismatch;
 found   : Int
 required: Nothing
      T(m) = k 
             ^