welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T = new Array (14) 
  var k =0
  var n=0
  for (j <- 0 to T.length -1){
    k = k +1
    n = n+j
    for (i <- 0 to j) {
      T(n)=k
      var m = n+i+1
      T(m) = k 
    }
  }
  return T(num-1)
}